# agui-benchmark

./: .env.example  .gitignore  AGUI-SPEC-COMPLIANCE.md  CEREBRAS-INTEGRATION.md  CEREBRAS_INTEGRATION.md  CLAUDE.md  DOCUMENTATION-CORRECTIONS.md  ENHANCED_TESTS_PROPOSAL.md  EVENT-COVERAGE-REPORT.md  EVENT-TRACKING-ANALYSIS.md  EVENT-TRACKING-RESULTS.md  FINAL_STATUS.md  FRAMEWORK-CAPABILITIES.md  HITL-IMPLEMENTATION-ANALYSIS.md  HITL-VALIDATION-RESULTS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  README.md  RUN_COMPLETE_BENCHMARK.md  SUMMARY.md  TOKEN-TRACKING-IMPLEMENTATION.md  ag-ui-benchmark-results-20260205-221930.txt  benchmark-results-20260205-221756.txt  feature_matrix.py  generate_reports.py  pyproject.toml  replay_test.py  start_all.sh  stop_all.sh  test_agent_enhanced.py  test_agents.py
ag2_agent/: main.py
agno_agent/: main.py
anthropic_raw/: main.py
benchmark-runs/: README.md
benchmark-runs/20260205-234231/: run-metadata.json
benchmark-runs/20260206-001157/: run-metadata.json
benchmark-runs/20260206-001205/: feature-matrix.json  run-metadata.json  summary.json
benchmark-runs/20260206-001432/: BENCHMARK-SUMMARY.md  run-metadata.json  summary.json
benchmark-runs/20260206-011500/: BENCHMARK-ANALYSIS.md  run-metadata.json  summary.json
benchmark-runs/20260206-013308/: run-metadata.json  summary.json
benchmark-runs/20260206-013607/: run-metadata.json  summary.json
benchmark-runs/20260206-014545/: run-metadata.json  summary.json
benchmark-runs/20260206-015725/: run-metadata.json  summary.json
benchmark-runs/20260206-042254/: run-metadata.json  summary.json
benchmark-runs/20260206-043108/: run-metadata.json  summary.json
benchmark-runs/20260206-101404/: summary.json  (+1 more)
cerebras_raw/: server.py
crewai_agent/: main.py
docs/: README.md
gemini_raw/: main.py
google_adk_agent/: main.py
langgraph_agent/: main.py
llamaindex_agent/: main.py
openai_raw/: main.py
pydantic_agent/: main.py
ts-agents/: package-lock.json  package.json  tsconfig.json
(+16583 files in other folders)
